force-app/main/default/objects/ATR_Taken__c/ATR_Taken__c.object-meta.xml
<CustomObject>
    <label>ATR Taken</label>
    <nameField>
        <displayFormat>ATR-{00000}</displayFormat>
        <label>ATR Completed No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATRs Taken</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>