force-app/main/default/objects/ATR_Taken__c/fields/ATR_Score__c.field-meta.xml
<CustomField>
    <fullName>ATR_Score__c</fullName>
    <label>ATR Score</label>
    <summarizedField>ATR_Question_Response__c.Response_Score__c</summarizedField>
    <summaryForeignKey>ATR_Question_Response__c.ATR_Taken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>