force-app/main/default/objects/ATR_Taken__c/fields/ATR_Template__c.field-meta.xml
<CustomField>
    <fullName>ATR_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATR Template</label>
    <referenceTo>ATR_Template__c</referenceTo>
    <relationshipLabel>ATRs Taken</relationshipLabel>
    <relationshipName>ATRs_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>