force-app/main/default/objects/ATR_Taken__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Profile History</relationshipLabel>
    <relationshipName>ATRs_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>