force-app/main/default/objects/ATR_Taken__c/fields/Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Profile</label>
    <referenceTo>Risk_Profile__c</referenceTo>
    <relationshipLabel>Client ATR Questionnaires</relationshipLabel>
    <relationshipName>ATRs_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>